Minor documentation improvements

--- a/Documentation/DrawingModel.wiki
+++ b/Documentation/DrawingModel.wiki
@@ -9,5 +9,6 @@
 The drawing model can be used to generate simple drawings that can be included in plots and reports.
 
 - a simple model for generating drawings (lines, ellipses, rectangles, text etc)
-- reusing render contexts and exporters 
-- can be included in the [ReportModel|report models]
+- reuse render contexts and exporters
+- provide custom controls (will try to share code with the plot controls)
+- drawings can be included in the [ReportModel|report models]
