--- a/Documentation/Contributions.wiki
+++ b/Documentation/Contributions.wiki
@@ -4,13 +4,13 @@
 
 == Contributions
 
-Bug fixes and new features are greatly appreciated. But please read the requirements below before submitting a pull request.
+Contributions to the project are greatly appreciated. But please read the requirements below before submitting a pull request.
 
-Many ways to contribute, not only in code, but can also be documentation, examples, packaging etc.
+Bug fixes and new features are great, but there are also many other ways to contribute. The documentation can always be improved, examples can be added, icons and web style can be made nicer.
 
-New features and bugs should be added in the [https://oxyplot.codeplex.com/workitem/list/basic|issues] list. It might be a good idea to discuss in the [https://oxyplot.codeplex.com/discussions|discussion forum] first if you are not sure if it is a bug.
+New features and bugs should always be added in the [https://oxyplot.codeplex.com/workitem/list/basic|issues] list. It might be a good idea to discuss in the [https://oxyplot.codeplex.com/discussions|discussion forum] first if you are not sure if it is a bug.
 
-Then create a [https://oxyplot.codeplex.com/SourceControl/network/create/fork|new fork] and submit a [https://oxyplot.codeplex.com/SourceControl/send/contribution|pull request] when the contribution is ready.
+Then create a [https://oxyplot.codeplex.com/SourceControl/network/create/fork|new fork] and submit the changes. Remember to include the issue number prefixed with a # sign in the submit descriptions. Create a [https://oxyplot.codeplex.com/SourceControl/send/contribution|pull request] when the contribution is ready.
 
 === Requirements for pull requests
 
@@ -22,5 +22,6 @@ Then create a [https://oxyplot.codeplex.com/SourceControl/network/create/fork|ne
 And please:
 
 - commit clean change lists, make it easy to review
+- include the issue number in the description, e.g. "#9945"
 - do not mix multiple issues in the same change list
-- do not clean code in the same change list as fixing an issue, do it in a separate commit
+- do not clean code in the same change list as fixing an issue, do it in a separate change list
