--- a/Documentation/ReportModel.wiki
+++ b/Documentation/ReportModel.wiki
@@ -4,8 +4,6 @@
 
 == Report model
 
-// TODO //
-
 The report model can be used to generate simple reports. The objective is to create a very simple object model that can be used for basic reports containing headers, paragraphs, simple tables and figures.
 
 The supported output formats are HTML, Latex and plain text. Support for Word (OpenXML) and PDF is under consideration, but this will add dependencies to other libraries.
@@ -19,4 +17,8 @@ The supported output formats are HTML, Latex and plain text. Support for Word (O
 |Drawing    |Vector graphics    |       |        |No     |  |  |
 |Equation   |Using Tex syntax   |       |        |No     |  |  |
 
-* planned
+=== Example
+
+```cs
+TODO = new Report();
+```
