--- a/Documentation/HelloSilverlight.wiki
+++ b/Documentation/HelloSilverlight.wiki
@@ -4,6 +4,8 @@
 
 == Silverlight Example
 
+This example shows how to create a Silverlight application where the content of the plot is defined in code.
+
 === Create project
 Start Visual Studio and select "FILE -> New -> Project..." to create a new Silverlight application:
 
@@ -26,7 +28,7 @@ You can also use the [http://docs.nuget.org/docs/start-here/using-the-package-ma
 PM> Install-Package OxyPlot.Silverlight
 ```
 
-=== Create a ViewModel
+=== Create a view model
 
 Add a class that creates a [API/OxyPlot.PlotModel|PlotModel] and a [API/OxyPlot.FunctionSeries|FunctionSeries].
 
