--- a/Documentation/HelloWpfXaml.wiki
+++ b/Documentation/HelloWpfXaml.wiki
@@ -4,7 +4,7 @@
 
 == WPF Example
 
-This example shows how to create a WPF application where the content of the plot is defined in code.
+This example shows how to create a WPF application where the content of the plot is defined in XAML.
 
 === Create project
 Start Visual Studio and select "FILE -> New -> Project..." to create a new WPF application:
@@ -28,23 +28,22 @@ PM> Install-Package OxyPlot.Wpf
 ```
 
 === Create a view model
-
-Add a class that creates a [API/OxyPlot.PlotModel|PlotModel] and a [API/OxyPlot.FunctionSeries|FunctionSeries].
+Then create class that defines the data to be plotted.
 
 ```cs
-@include ..\Source\Examples\DocumentationExamples\HelloWorld\WpfApplication1\MainViewModel.cs
+@include ..\Source\Examples\DocumentationExamples\HelloWorld\WpfApplication2\MainViewModel.cs
 ```
 
 === Create the view
 
-Define the namespace in the `Window` element, set the `DataContext` and add a [API/OxyPlot.Wpf.Plot|`Plot`] control:
+Define the namespace in the `Window` element, set the `DataContext` and add a [API/OxyPlot.Wpf.Plot|Plot] control:
 
 ```xml
-@include ..\Source\Examples\DocumentationExamples\HelloWorld\WpfApplication1\MainWindow.xaml
+@include ..\Source\Examples\DocumentationExamples\HelloWorld\WpfApplication2\MainWindow.xaml
 ```
 
 The application should now look like this:
 
-{Images/WpfExample1.png}
+{Images/WpfExample2.png}
 
-The source code can be found in `Documentation\Examples\WpfApplication1`.
+The source code can be found in `Documentation\Examples\WpfApplication2`.
